# MPC

./: .gitignore  MPC_IMPROVEMENTS.md  experimental_mpc.py  main.py  main_mpc.py  main_mpc2.py  main_mpc3.py  main_mpc4.py  main_mpc5.py  main_mpc6.py  main_mpc_improved.py  main_pure_pursuit.py  main_pure_pursuit_video.py  mpc.py  mpc_sine_wv.py  mpc_wv.py  pp.py
controls/mpc/: __init__.py  casadi_frenet_model.py  casadi_vehicle_model.py  constants.py  mpc.py  mpc_good_but_slow.py  mpc_improved.py  test_start.py  test_y.txt  tools.py
controls/pid/: pid.py
controls/pure_pursuit/: pure_pursuit.py
controls/simple_steering_control/: simple_steering_control.py
cpp_port/: C16_CONTINENTAL_Tire_Data.h  CMakeLists.txt  bindings.cpp  constants.h  main.cpp  main.py
py_model/: C16_CONTINENTAL_Tire_Data.py  constants.py  input.txt  main.py
sim/py_model/: constants.py  model.py
sim/track_editor/: FSG.yaml  create.py
track_editor/: create.py
